WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126126
REGRESSION (
r160672
): Random remote layers are getting shadows
https://bugs.webkit.org/show_bug.cgi?id=126126
Summary
REGRESSION (r160672): Random remote layers are getting shadows
Tim Horton
Reported
2013-12-21 21:46:23 PST
In
http://trac.webkit.org/changeset/160672
, we unconditionally check m_properties.customAppearance in requiresCustomAppearanceUpdateOnBoundsChange without regard for whether it has ever been initialized. This would get us to send an uninitialized custom appearance to the UI process, which could end up requesting a shadow. I have a patch to initialize lots of things to their CA defaults.
Attachments
patch
(3.15 KB, patch)
2013-12-21 21:59 PST
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-12-21 21:59:46 PST
Created
attachment 219862
[details]
patch
Tim Horton
Comment 2
2013-12-23 13:06:47 PST
http://trac.webkit.org/changeset/161013
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug